--- a/smartcare_svelte/src/app.html
+++ b/smartcare_svelte/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="%sveltekit.bootstrap_stylesheet%" rel="stylesheet" crossorigin="anonymous" id="bootstrap-stylesheet">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
